tests/paczka1/fuzzy1/73607072.err
Error in line 2: YthNwMkg3 A455 2,6
Error in line 16: tgKUGUn0439 A455 13,06
Error in line 14: tgKUGUn0439 A835 84,4
Error in line 13: A835 S59 85,2
Error in line 15: TqQmUp0LRUw A455 30,0
Error in line 24: TqQmUp0LRUw S659 1m3,5
Error in line 19: A835 A835 37,2
Error in line 17: tgKUGUn0439 A455 42,6
Error in line 25: A835 A455 49,0
